# 007

./: .gitignore  Comp 1.json  README.md  package.json
app/: App.js  app.json  globals.js  package-lock.json
app/components/: Base.js
app/hooks/: useGeolocation.js  useQueryWeather.js
pwa/: .gitignore  Dockerfile  capacitor.config.json  docker-compose.yml  globals.d.ts  package-lock.json  package.json  start.sh  tailwind.config.js  template.html  webpack.config.js
pwa/public/: index.html  manifest.json
pwa/src/: app.js  dummy-data.json  fab_states.js  global.js  style.css
pwa/src/pages/: Main.js  (+6 more)
react-native/: .gitignore  App.js  app.config.ts  app.json.ts  globals.d.ts  globals.js  package-lock.json  package.json
react-native/components/: AddressSearch.js  Badges.js  Button.js  IconText.js  Layout.js  LineChart.js  LocationShare.js  Main.js  Map.js  MapBox.js  Privacy.js  ScrollView.js  Settings.js  TimeSelector.js  TopMain.js  WeatherData.js  index.js
react-native/hooks/: useGetAddress.js  useLoadFonts.js  useQueryWeather.js
react-native/styles/: global.js
react-native/svg/: BackArrow.js  Circle.js  Close.js  CloudCover.js  DrewPoint.js  FeelsLike.js  Humidity.js  Plus.js  Pointer.js  Precipitation.js  Pressure.js  UVindex.js  Wind.js  index.js
review_scraping/: index.js  package-lock.json  package.json  play_store_apps.json
sentiment_analysis/: pyproject.toml
sentiment_analysis/src/: correlations.py  frequency-normolised.py  model.py  wordcloud.py
sentiment_analysis/src/playground/: find.py  find4.py  first.py  main.py  three.py  train.py
(+54 files in other folders)
