[tool.poetry]
name = "SA"
version = "0.1.0"
description = ""
authors = ["007 group"]

[tool.poetry.dependencies]
python = "^3.10.0 <3.11.0"
matplotlib = "^3.8.1"
wordcloud = "^1.9.2"
nlpretext = "^1.2.2"
numpy = "^1.26.1"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.14.0"
pandas = "1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
i              = "poetry env use python"                      # install
